* Allow to propagate modifications to sibling contracts

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* Properly cancel and split invoices around endorsement dates

Version 1.2 - 2014-07-01
* Changelog file creation