@@ -3,14 +3,12 @@ from trytond.pyson import Eval, And
 from trytond.transaction import Transaction
 from trytond import backend
 
-from trytond.modules.cog_utils import fields, utils
+from trytond.modules.cog_utils import fields
 
 __metaclass__ = PoolMeta
 __all__ = [
     'Contract',
     'ContractBillingInformation',
-    'ChangeBankAccount',
-    'ChangeBankAccountSelect',
     ]
 
 
@@ -124,74 +122,3 @@ class ContractBillingInformation:
     @classmethod
     def functional_skips_for_duplicate(cls):
         return set(['sepa_mandate'])
-
-
-class ChangeBankAccount:
-    __name__ = 'contract.bank_account.change'
-
-    def update_contract(self):
-        super(ChangeBankAccount, self).update_contract()
-        pool = Pool()
-        data = self.select_new_account
-        if not data.need_new_sepa_mandate:
-            new_mandate = data.new_sepa_mandate
-        else:
-            SepaMandate = pool.get('account.payment.sepa.mandate')
-            new_mandate = SepaMandate()
-            new_mandate.party = data.subscriber
-            new_mandate.account_number = data.new_bank_account.numbers[0]
-            new_mandate.type = 'recurrent'
-            new_mandate.scheme = 'CORE'
-            new_mandate.signature_date = data.sepa_mandate_date
-            new_mandate.state = 'validated'
-            new_mandate.company = data.contract.company
-            new_mandate.save()
-        for contract in list(data.other_contracts) + [data.contract]:
-            contract.billing_informations[-1].sepa_mandate = new_mandate
-
-
-class ChangeBankAccountSelect:
-    __name__ = 'contract.bank_account.change.select'
-
-    sepa_mandate_date = fields.Date('Sepa Mandate Signature Date',
-        states={
-            'required': Eval('need_new_sepa_mandate', False),
-            'invisible': ~Eval('need_new_sepa_mandate', False)},
-        domain=[('sepa_mandate_date', '<=', Eval('max_signature_date'))],
-        depends=['need_new_sepa_mandate', 'max_signature_date'])
-    need_new_sepa_mandate = fields.Boolean('Need new Sepa Mandate',
-        states={'invisible': True})
-    max_signature_date = fields.Date('Max Signature Date',
-        states={'invisible': True})
-    new_sepa_mandate = fields.Many2One('account.payment.sepa.mandate',
-        'New Sepa Mandate', states={'invisible': True})
-
-    @fields.depends('effective_date', 'max_signature_date',
-        'need_new_sepa_mandate', 'new_bank_account', 'new_sepa_mandate',
-        'other_contracts', 'possible_contracts', 'subscriber')
-    def on_change_new_bank_account(self):
-        self.max_signature_date = min(utils.today(), self.effective_date)
-        if not self.new_bank_account:
-            self.need_new_sepa_mandate = False
-            self.new_sepa_mandate = None
-            return
-        self.need_new_sepa_mandate = True
-        for elem in sum([list(number.mandates)
-                    for number in self.new_bank_account.numbers], []):
-            if self.subscriber == elem.party:
-                self.need_new_sepa_mandate = False
-                self.new_sepa_mandate = elem
-                break
-        else:
-            self.new_sepa_mandate = None
-        if not self.need_new_sepa_mandate:
-            if set(self.other_contracts) != set(self.possible_contracts):
-                self.need_new_sepa_mandate = True
-
-    @fields.depends('need_new_sepa_mandate', 'new_sepa_mandate',
-        'other_contracts', 'possible_contracts')
-    def on_change_other_contracts(self):
-        if set(self.other_contracts) == set(self.possible_contracts):
-            self.need_new_sepa_mandate = False
-        elif not self.new_sepa_mandate:
-            self.need_new_sepa_mandate = True
