@@ -39,13 +39,11 @@ def register():
         PaymentTermLineRelativeDelta,
         SynthesisMenuInvoice,
         SynthesisMenu,
-        ChangeBankAccountSelect,
         module='contract_insurance_invoice', type_='model')
     Pool.register(
         InvoiceContract,
         SynthesisMenuOpen,
         DisplayContractPremium,
         ContractBalance,
-        ChangeBankAccount,
         Renew,
         module='contract_insurance_invoice', type_='wizard')
