@@ -18,6 +18,14 @@
             <field name="type">form</field>
             <field name="name">change_billing_information_form</field>
         </record>
+        <!-- ############################### -->
+        <!-- # Change Direct Debit Account # -->
+        <!-- ############################### -->
+        <record model="ir.ui.view" id="change_direct_debit_account_view_form">
+            <field name="model">contract.direct_debit_account.change</field>
+            <field name="type">form</field>
+            <field name="name">change_direct_debit_account_form</field>
+        </record>
         <!-- ###################### -->
         <!-- # Contract Displayer # -->
         <!-- ###################### -->
