@@ -10,6 +10,15 @@
             <field name="inherit" ref="endorsement_insurance_invoice.change_billing_information_view_form"/>
             <field name="name">change_billing_information_form</field>
         </record>
+        <!-- ############################### -->
+        <!-- # Change Direct Debit Account # -->
+        <!-- ############################### -->
+        <record model="ir.ui.view" id="change_direct_debit_account_view_form">
+            <field name="model">contract.direct_debit_account.change</field>
+            <field name="type">form</field>
+            <field name="inherit" ref="endorsement_insurance_invoice.change_direct_debit_account_view_form"/>
+            <field name="name">change_billing_information_form</field>
+        </record>
         <!-- ####################### -->
         <!-- # Billing Information # -->
         <!-- ####################### -->
@@ -17,6 +26,12 @@
             <field name="model">contract.billing_information</field>
             <field name="type">form</field>
             <field name="inherit" ref="endorsement_insurance_invoice.endorsement_billing_information_view_form"/>
+            <field name="name">endorsement_billing_information_form</field>
+        </record>
+        <record model="ir.ui.view" id="endorsement_direct_debit_account_view_form">
+            <field name="model">contract.billing_information</field>
+            <field name="type">form</field>
+            <field name="inherit" ref="endorsement_insurance_invoice.endorsement_direct_debit_account_view_form"/>
             <field name="name">endorsement_billing_information_form</field>
         </record>
     </data>
