@@ -1,3 +1,4 @@
+* Add dedicated endorsement to direct debit account modification
 * Allow to propagate modifications to sibling contracts
 
 Version 1.4 - 2015-05-29
